# python-universal-hex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  make.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/universal_hex/: __init__.py  cli.py  ihex.py  uhex.py  universal_hex.py  utils.py
tests/: conftest.py  test_cli.py  test_ihex.py  test_js_comparison.py  test_uhex.py  test_utils.py
tests/hex-files/: makecode-v0-intel.hex  makecode-v1-intel.hex  makecode-v2-intel.hex  makecode-v3-universal.hex  makecode-v5-universal.hex  makecode-v8-universal.hex
tests/universalhex_js/: README.md  microbit-universal-hex.js  universalhex_js.py
