[project]
name = "universal-hex"
version = "0.1.0"
description = "Create and process micro:bit Universal Hex files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Carlos Pereira Atencio", email = "carlosperate@embeddedlog.com" }]
keywords = ["microbit", "hex", "intel-hex", "universal-hex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
]

[project.urls]
Homepage = "https://github.com/carlosperate/python-universal-hex"
Repository = "https://github.com/carlosperate/python-universal-hex"

[build-system]
requires = ["uv_build>=0.9.24"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
